--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node server.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,7 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@hubspot/api-client": "^13.4.0",
     "axios": "^1.13.2",
+    "express": "^4.19.2",
+    "mongodb": "^7.0.0",
     "winston": "^3.19.0"
   }
 }
